RESOLVED FIXED219578
Unreviewed. Add missing GPU_PROCESS guards around RemoteMediaEngineConfigurationFactory after r270462
https://bugs.webkit.org/show_bug.cgi?id=219578
Summary Unreviewed. Add missing GPU_PROCESS guards around RemoteMediaEngineConfigurat...
Lauro Moura
Reported 2020-12-06 04:44:23 PST
Unreviewed. Add missing GPU_PROCESS guards around RemoteMediaEngineConfigurationFactory after r270462
Attachments
Patch (2.11 KB, patch)
2020-12-06 04:45 PST, Lauro Moura
no flags
Lauro Moura
Comment 1 2020-12-06 04:45:45 PST
EWS
Comment 2 2020-12-06 05:39:13 PST
Committed r270482: <https://trac.webkit.org/changeset/270482> All reviewed patches have been landed. Closing bug and clearing flags on attachment 415514 [details].
Radar WebKit Bug Importer
Comment 3 2020-12-06 05:40:18 PST
youenn fablet
Comment 4 2020-12-07 05:52:33 PST
*** Bug 219580 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.